--- a/style.css
+++ b/style.css
@@ -7,13 +7,42 @@
     --primary-color: #e8f9fd;
 }
 
+body {
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0;
+    font-family: var(--font-family);
+}
+
+h1 {
+    font-size: 5em;
+}
+
+h3 {
+    font-size: 2em;
+    margin-top: 20px;
+}
 
 
+.mensagem {
+    font-size: 1.5em;
+    margin-top: 40px;
+}
 
 
-
-
-
+.box {
+    border: 2px solid var(--primary-color);
+    display: inline-block;
+    font-size: 4em;
+    padding: 10px;
+    margin: 20px;
+}
 
 
 
