--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1 {
     font-size: 5em;
 }
 
-h3 {
+h2 {
     font-size: 4em;
 }
 
@@ -49,6 +49,14 @@ h3 {
     margin: 20px;
 }
 
+
+.btn-jogar {
+    padding: 8px 15px;
+    border: 0;
+    background: var(--primary-color);
+    border-radius: 5px;
+    margin-top: 20px;
+}
 
 
 
